# netflix-clone-app

./: .gitignore  README.md
backend/: .gitignore  README.md  Taskfile.yml  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 79f5e743ff9c_initialize_db.py  d5a7f128c903_add_poster_entity.py  e255eacc2580_initialize_db.py
backend/app/api/: main.py
backend/app/api/routers/: movies.py
backend/app/api/schemas/: movies.py
backend/app/core/: entities.py  exceptions.py  factories.py  repositories.py
backend/app/core/services/: movies.py
backend/app/core/usecase/: movies.py
backend/app/persistence/: models.py  repositories.py  unit_of_work.py
backend/tests/: test_api.py  test_repositories.py  test_usecase.py
